@@ -721,7 +721,7 @@
       "&func.bookmarkThisLink;", "&func.bookmarkPage;",
       "&func.bookmarkOpenTabs;", "&func.bookmarks;", "&func.bookmarksToolbar;",
       "&func.history;", "&func.viewPageSource;", "&func.viewPageInfo;",
-      "&func.showOnlyThisFrame;", "&func.properties;", "&func.printPage;",
+      "&func.showOnlyThisFrame;", "&func.empty;", "&func.printPage;",
       "&func.focusLocationBar;", "&func.newPrivateWindow;", "&func.cut;",
       "&func.copy;", "&func.paste;", "&func.undo;", "&func.selectAll;",
       "&func.toggleFindBar;", "&func.zoomIn;", "&func.zoomOut;",
@@ -746,7 +746,7 @@
       "loadURLScript17", "loadURLScript18", "loadURLScript19",
       "loadURLScript20", "markVisitedLinks", "bookmarkThisLink", "bookmarkPage",
       "bookmarkOpenTabs", "bookmarks", "bookmarksToolbar", "history",
-      "viewPageSource", "viewPageInfo", "showOnlyThisFrame", "properties",
+      "viewPageSource", "viewPageInfo", "showOnlyThisFrame", "empty",
       "printPage", "focusLocationBar", "newPrivateWindow", "cut", "copy",
       "paste", "undo", "selectAll", "toggleFindBar", "zoomIn", "zoomOut",
       "zoomReset"
