@@ -74,7 +74,6 @@ history=Historie
 viewPageSource=Zobrazit zdrojový kód stránky
 viewPageInfo=View Page Info
 showOnlyThisFrame=Zobrazit jen tento rámec
-properties=Vlastnosti
 printPage=Vytisknout stránku
 focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
