@@ -53,7 +53,6 @@ history=Chronik
 viewPageSource=Seitenquelltext anzeigen
 viewPageInfo=View Page Info
 showOnlyThisFrame=Nur diesen Frame anzeigen
-properties=Eigenschaften
 printPage=Seite drucken
 focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
