@@ -74,7 +74,6 @@ history=Toggle History
 viewPageSource=View Page Source
 viewPageInfo=View Page Info
 showOnlyThisFrame=Show Only This Frame
-properties=Properties
 printPage=Print Page
 focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
