@@ -67,7 +67,6 @@ history=Mostrar/Ocultar historial
 viewPageSource=Ver código fuente
 viewPageInfo=Ver información de la página
 showOnlyThisFrame=Mostrar sólo este marco
-properties=Propiedades
 printPage=Imprimir página
 focusLocationBar = Seleccionar barra de direcciones
 newPrivateWindow = Nueva ventana privada
