@@ -74,7 +74,6 @@ history=Basculer historique
 viewPageSource=Afficher source
 viewPageInfo=Afficher info. page
 showOnlyThisFrame = Afficher ce cadre seulement
-properties=Propri\u00E9t\u00E9s
 printPage=Imprimer page
 focusLocationBar = Sélectionner la barre d'adresse
 newPrivateWindow = Nouvelle fenêtre de navigation priv\u00E9e
