@@ -67,7 +67,6 @@ history=Előzmények megjelenítése
 viewPageSource=Oldal forrása
 viewPageInfo=Oldal tulajdonságainak megtekintése
 showOnlyThisFrame=Csak ezt a keretet mutassa
-properties=Tulajdonságok
 printPage=Oldal nyomtatása
 focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
