@@ -60,7 +60,6 @@ history=Mostra/Nascondi Cronologia
 viewPageSource=Mostra il Codice della Pagina
 viewPageInfo=View Page Info
 showOnlyThisFrame=Mostra solo questa Frame
-properties=Proprietà
 printPage=Stampa Pagina
 focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
