@@ -74,7 +74,6 @@ history=履歴サイドバーの切り替え
 viewPageSource=ページのソースを表示
 viewPageInfo=View Page Info
 showOnlyThisFrame = このフレームだけを表示
-properties=プロパティ
 printPage=ページを印刷
 focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
