@@ -67,7 +67,6 @@ history=열어본 페이지 목록 전환
 viewPageSource=페이지 소스 보기
 viewPageInfo=페이지 정보 표시
 showOnlyThisFrame=이 프레임 만 표시
-properties=속성
 printPage=페이지 인쇄
 focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
