@@ -53,7 +53,6 @@ history=Pokaż/ukryj historię
 viewPageSource=Źródło strony
 viewPageInfo=View Page Info
 showOnlyThisFrame=Pokaż tylko tę ramkę
-properties=Właściwości
 printPage=Drukuj stronę
 focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
