@@ -74,7 +74,6 @@ history=Alternar Histórico
 viewPageSource=Ver Código Fonte da Página
 viewPageInfo=View Page Info
 showOnlyThisFrame = Mostrar Somente Este Quadro
-properties=Propriedades
 printPage=Imprimir Página
 focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
