@@ -53,7 +53,6 @@ history=História
 viewPageSource=Zobraziť zdrojový kód stránky
 viewPageInfo=View Page Info
 showOnlyThisFrame=Zobraziť len tento rámec
-properties=Vlastnosti
 printPage=Vytlačiť stránku
 focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
