@@ -74,7 +74,6 @@ history=Geçmişe Geçiş Yap
 viewPageSource=Sayfa Kaynağını Göster
 viewPageInfo=View Page Info
 showOnlyThisFrame=Yalnızca Bu Çerçeveyi Göster
-properties=Özellikler
 printPage=Sayfayı Yazdır
 focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
