@@ -74,7 +74,6 @@ history=切换历史
 viewPageSource=查看页面源代码
 viewPageInfo=查看页面信息
 showOnlyThisFrame=只显示此框架
-properties=属性
 printPage=打印页面
 focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
