@@ -198,7 +198,6 @@ END OF INSTRUCTIONS
 <!ENTITY func.viewPageSource "檢視原始碼">
 <!ENTITY func.viewPageInfo "View Page Info">
 <!ENTITY func.showOnlyThisFrame "只顯示本頁框">
-<!ENTITY func.properties "屬性">
 <!ENTITY func.printPage "列印">
 <!ENTITY func.focusLocationBar "Focus Location Bar">
 <!ENTITY func.newPrivateWindow "New Private Window">
