@@ -74,7 +74,6 @@ history=歷史側邊欄
 viewPageSource=檢視原始碼
 viewPageInfo=View Page Info
 showOnlyThisFrame = 只顯示本頁框
-properties=屬性
 printPage=列印 
 focusLocationBar = Focus Location Bar
 newPrivateWindow = New Private Window
